<resources>
    <string name="app_name">SecuGerbisNucleaires</string>
    <string name="justSignedUp">Confirm</string>
    <string name="confirmed">ConfirmedByAdmin</string>
    <string name="fullySignedUp">Done</string>
    <string name="isVerySuccessful">iSucceeded</string>
    <string name="book_icon">Book icon</string>
    <string name="patient_icon">Patient icon</string>
    <string name="patients_list">Patient\'s List : </string>
    <string name="add_patient">Add Patient</string>
    <string name="patient_disease">Disease :</string>
    <string name="patient_age">Age : </string>
    <string name="years_old">years old</string>
    <string name="list_of_patient_visits">List Of Visits : </string>
    <string name="edit_patient_info">Edit Patient Info</string>
    <string name="lastname">Lastname</string>
    <string name="age">Age :</string>
    <string name="firstname">Firstname</string>
    <string name="disease_explanation">Disease Explanation :</string>
    <string name="add_a_patient">Add a Patient</string>
    <string name="cancel">Cancel</string>
    <string name="_0">0</string>
    <string name="temperature">Temperature</string>
    <string name="treatment">Treatment :</string>
    <string name="patient_state">Patient State :</string>
    <string name="add_visit">Add Visit</string>
    <string name="date">--/--/----</string>
    <string name="dateName">Date :</string>
    <string name="treatment_given">Treatment Given :</string>
    <string name="delete_patient">Delete Patient</string>
    <string name="visit_date">Visit Date :</string>
    <string name="delete_visit">Delete Visit</string>
    <string name="edit_visit_info">Edit Visit Info</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="admin_code">Enter The Admin Code</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="connexion">Connexion</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up_login_page"><u>Sign Up !</u></string>
    <string name="medecine_logo">Medecine Logo</string>
    <string name="return_button">Return</string>
    <string name="modify">Modify</string>
    <string name="phone_number">Phone number</string>
    <string name="personal_informations">Personal informations</string>
    <string name="logout">Logout</string>
    <string name="nurse_informations">Nurse informations</string>
    <string name="patient_informations">Patient informations</string>
    <string name="modify_your_informations">Modify your informations</string>
    <string name="current_password">Current password</string>
    <string name="save">Save</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="new_admin_code">New Admin Code :</string>
    <string name="change_admin_code">Change Admin Code</string>
    <string name="new_nurses">New Nurses :</string>
    <string name="confirm">Confirm</string>
    <string name="reject">Reject</string>
    <string name="all_nurses">All Nurses</string>
    <string name="nurses_to_accept">Nurses To Accept</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
