<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lastnameNurse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="@+id/firstnameNurse"
        app:layout_constraintStart_toStartOf="@+id/firstnameNurse"
        app:layout_constraintTop_toTopOf="@+id/textLastname" />

    <TextView
        android:id="@+id/phoneNurse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="@+id/lastnameNurse"
        app:layout_constraintStart_toStartOf="@+id/lastnameNurse"
        app:layout_constraintTop_toTopOf="@+id/textPhone" />

    <TextView
        android:id="@+id/emailNurse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="@+id/phoneNurse"
        app:layout_constraintStart_toStartOf="@+id/phoneNurse"
        app:layout_constraintTop_toTopOf="@+id/textEmail" />

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/personal_informations"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:text="@string/firstname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInfo" />

    <TextView
        android:id="@+id/firstnameNurse"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textFirstname"
        app:layout_constraintTop_toTopOf="@+id/textFirstname" />

    <TextView
        android:id="@+id/textLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/lastname"
        app:layout_constraintEnd_toEndOf="@+id/textFirstname"
        app:layout_constraintStart_toStartOf="@+id/textFirstname"
        app:layout_constraintTop_toBottomOf="@+id/textFirstname" />

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="@+id/textLastname"
        app:layout_constraintTop_toBottomOf="@+id/textLastname" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/textPhone"
        app:layout_constraintTop_toBottomOf="@+id/textPhone" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack"
        android:text="@string/modify"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="@+id/emailNurse"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="@+id/homeButton" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="81dp"
        android:background="@color/colorRed"
        android:text="@string/return_button"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonEdit"
        app:layout_constraintStart_toStartOf="@+id/textEmail"
        app:layout_constraintTop_toBottomOf="@+id/emailNurse" />

</androidx.constraintlayout.widget.ConstraintLayout>