<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/rejectNurseButton"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:background="@color/colorRed"
        android:text="@string/reject"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/confirmNurseButton"
        app:layout_constraintEnd_toEndOf="@+id/nurseName"
        app:layout_constraintStart_toEndOf="@+id/confirmNurseButton"
        app:layout_constraintTop_toTopOf="@+id/confirmNurseButton" />

    <TextView
        android:id="@+id/nurseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nurseEmailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/nurseName"
        app:layout_constraintTop_toBottomOf="@+id/nurseName" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rejectNurseButton" />

    <TextView
        android:id="@+id/nurseEmailValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="@+id/nurseName"
        app:layout_constraintStart_toEndOf="@+id/nurseEmailName"
        app:layout_constraintTop_toTopOf="@+id/nurseEmailName" />

    <Button
        android:id="@+id/confirmNurseButton"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorBlack"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/rejectNurseButton"
        app:layout_constraintStart_toStartOf="@+id/nurseEmailName"
        app:layout_constraintTop_toBottomOf="@+id/nurseEmailName" />

</androidx.constraintlayout.widget.ConstraintLayout>